fix task creation and scrollbar on kanban column

--- a/src/features/Kanban/kanban.scss
+++ b/src/features/Kanban/kanban.scss
@@ -42,7 +42,8 @@
     gap: 10px;
     width: 100%;
     border-radius: 3px;
-    overflow: scroll;
+    overflow-y: auto;
+    height: 100%;
   }
 }
 
